--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,13 @@ dependencies:
   flutter_swiper: ^1.1.6
   flutter_screenutil: ^0.5.3
   url_launcher: ^5.0.1
-
+  flutter_easyrefresh: ^1.2.7
+  provide: ^1.0.2
+  fluttertoast: ^3.0.1
+  fluro: ^1.4.0
+  flutter_html: ^0.9.6
+  sqflite: ^1.1.0
+  shared_preferences: ^0.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
