--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_shop
+name: Flutter_Shop
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
